--- a/templates/generate_test.html
+++ b/templates/generate_test.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}{{ title }}{% endblock %}
 {% block body %}
-<div class="ui raised very padded text container segment">
+<div class="ui raised very padded  inverted orange text container segment">
     <h1>Generate Test</h1>
     <label for="note">Please enter the Subject Name an the number of Marks.</label><br><br>
     <form action="" method="post" enctype="multipart/form-data">
@@ -14,31 +14,34 @@
         <div class="ui fluid input">
             <input type="text" class="ui input" placeholder="Marks" name="marks" id="marks"><br>
         </div><br>
-
+        
         <button type="submit" class="ui green button">Generate Test</button>
     </form><br>
     <a href="/internal-assesment">
         <button class="ui black button">Go Back</button>
     </a>
+    
+    <div class="ui raised very padded  inverted yellow  container segment">
 
-    <table class="ui celled table">
-        <thead>
-          <tr><th>Qno</th>
-          <th>Question</th>
-          <th>Marks</th>
-        </tr></thead>
-        <tbody>
-            {% for qno,question,marks in questions%}
-                <tr>
-                    <td data-label="Qno">{{ qno.strip() }}</td>
-                    <td data-label="Question">{{ question.strip() }}</td>
-                    <td data-label="Marks">{{ marks.strip() }}</td>
-                </tr>
-            {% endfor %}
-
-          
-        </tbody>
-      </table>
+        <table class="ui inverted black striped table">
+            <thead>
+                <tr><th>Qno</th>
+                    <th>Question</th>
+                    <th>Marks</th>
+                </tr></thead>
+                <tbody>
+                    {% for qno,question,marks in questions%}
+                    <tr>
+                        <td data-label="Qno">{{ qno.strip() }}</td>
+                        <td data-label="Question">{{ question.strip() }}</td>
+                        <td data-label="Marks">{{ marks.strip() }}</td>
+                    </tr>
+                    {% endfor %}
+                    
+                    
+                </tbody>
+            </table>
+        </div>
 
 </div>
 
