Changed the color theme

--- a/templates/upload_marks.html
+++ b/templates/upload_marks.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}{{ title }}{% endblock %}
 {% block body %}
-<div class="ui raised very padded text container segment">
+<div class="ui raised very padded inverted orange text container segment">
     <h1>Upload Marks</h1>
     <label for="note">
         <b>Note:</b>The file should end with (.csv) and the filename should be as follows:<br><br>
