added a new button for faculty registration

--- a/templates/cms_page.html
+++ b/templates/cms_page.html
@@ -8,6 +8,9 @@
         <a href="/login">    
             <button class="ui black button">Login</button>
         </a>
+        <a href="/faculty-registration">    
+            <button class="ui black button">New Faculty</button>
+        </a>
     </div>
 
 </div>
