Auto filled batch_id and disabled the field

--- a/templates/manage_batch_subjects_page_2.html
+++ b/templates/manage_batch_subjects_page_2.html
@@ -6,7 +6,7 @@
     <form action="" method="post" enctype="multipart/form-data">
         <label for="batch details" class="ui large header">Batch Details</label><br><br>
         <div class="ui fluid input">
-          <input type="text" name="batch_id" id="batch_id" class="ui input" placeholder="Batch ID" required>
+          <input type="text" name="batch_id" id="batch_id" class="ui input" placeholder="Batch ID" value="{{ batch_id }}" required disabled>
         </div><br>
         <label for="theory subjects information" class="ui large header">Theory Subjects</label><br><br>
         <div class="ui fluid input">
