--- a/templates/base.html
+++ b/templates/base.html
@@ -1,37 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title%}{% endblock %}</title>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.5.0/semantic.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/@blaze/css@x.x.x/dist/blaze/blaze.css">
+    <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="{{ url_for('static',filename='style/style.css') }}">
 </head>
-
-<body>
-    <header>
-        <nav>
-            <div class="ui inverted pointing menu">
-                <a href="/" class="item">Home</a>
-                <a href="/admission" class="item">Admission</a>
-                <a href="/internal-assesment" class="item">Internal Assesment</a>
-                <a href="/reports" class="item">Reports</a>
-                <a href="/teachers-dashboard" class="item">Teacher's Dashboard</a>
-                {% if role.upper() == "HOD" %}
-                    <a href="/admin-dashboard" class="item">Admin's Dashboard</a>
-                {% endif %}
-                <a href="/attendance" class="item">Attendance</a>
-                <a href="/account" class="item">Account</a>
-
-            </div>
-        </nav>
-    </header>
-    <img src="{{ url_for('static',filename='imgs/logo.gif') }}" class="ui small centered image">
-    {% block body%}
-    {% endblock %}
-    <script href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.5.0/semantic.min.js"></script>
+<body class="blue-background">
+    <div class="heading navbar" id="navbar">
+        <ul class="nav-items">
+            <li class="nav-item"><a href="/home">Home</a></li>
+            <li class="nav-item"><a href="/admission">Admission</a></li>
+            <li class="nav-item"><a href="/internal-assesment">Internal Assesment</a></li>
+            {% if role == "HOD" %}
+                <li class="nav-item"><a href="/admin-dashboard">Admins Dashboard</a></li>
+            {% endif %}
+            <li class="nav-item"><a href="/teachers-dashboard">Teachers Dashboard</a></li>
+            <li class="nav-item"><a href="/account">My Account</a></li>
+        </ul>
+    </div>
+    {% block body %}{% endblock %}
 </body>
-
 </html>
