--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block title %}{{ title }}{% endblock %}
 {% block body %}
-<h1 class="ui centered header">Home</h1>
-<div class="ui inverted raised very padded medium text inverted orange container segment">
+<div class="container">
+    <h1 class="heading">Home</h1>
 
 </div>
 {% endblock %}
