--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -1,16 +1,15 @@
 {% extends "plain_page.html" %}
 {% block title %}{{ title }}{% endblock %}
 {% block body %}
-<h1 class="ui centered header">Login</h1>
-<div class="ui inverted raised very padded medium text orange container segment">
+<h1 class="heading">Login</h1>
+<div class="small-container">
     <form action="" method="post" enctype="multipart/form-data">
-        <div class="ui fluid input">
-            <input type="text" name="faculty_id" id="faculty_id" class="ui input" placeholder="Faculty ID" required>
-        </div><br>
-        <div class="ui fluid input">
-            <input type="password" name="password" id="password" class="ui input" placeholder="Password" required>
-        </div><br>
+        <label for="" class="plain medium-font">Faculty ID</label><br>
+        <input type="text" name="faculty_id" id="faculty_id" class="plain small-font long-input" placeholder="Faculty ID" required><br><br>
+        
+        <label for="" class="plain medium-font">Password</label><br>
+        <input type="password" name="password" id="password" class="plain small-font long-input" placeholder="Password" required><br><br>
         <button type="submit" class="ui black button">Login</button>
     </form>
-</div>
+</div><br><br>
 {% endblock %}
