--- a/templates/success.html
+++ b/templates/success.html
@@ -1,9 +1,9 @@
 {% extends "plain_page.html" %}
 {% block title %}{{ title }}{% endblock %}
 {% block body %}
-<div class="ui inverted raised very padded medium text inverted green container segment">
-    <h1 class="ui centered header">Success</h1>
-    <p class="ui centered">The task you performed is successfully completed 🥳</p>
+<div class="green container">
+    <h1 class="heading">Success</h1>
+    <p class="plain">The task you performed is successfully completed 🥳</p>
 
 </div>
 {% endblock %}
