--- a/templates/failed.html
+++ b/templates/failed.html
@@ -1,9 +1,9 @@
 {% extends "plain_page.html" %}
 {% block title %}{{ title }}{% endblock %}
 {% block body %}
-<div class="ui inverted raised very padded medium text inverted green container segment">
-    <h1 class="ui centered header">Failed</h1>
-    <p class="ui centered">The task you performed has Failed 😞</p>
+<div class="red container">
+    <h1 class="heading">Failed</h1>
+    <p class="plain">The task you performed has Failed 😞</p>
 
 </div>
 {% endblock %}
